<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dashee</string>

    <string name="title_activity_main">Dashee</string>

    <string name="pref_title">Settings</string>
    <string name="pref_subtitle">Configure your remote</string>

    <string name="pref_server">Server Settings</string>
    <string name="pref_server_ip">Vehicle IP Address</string>
    <string name="pref_server_ip_default">192.168.1.200</string>
    <string name="pref_server_port">Port</string>
    <string name="pref_server_port_default">2047</string>
    <string name="power_joystick_desc">Car power joystick</string>

    <string name="pref_channel_title">Settings</string>
    <string name="pref_channel_summary">Configure your remote</string>

    <string name="pref_channel">Vehicle Settings</string>
    <string name="pref_channel_default">Trim, Invert, Min and Max values</string>

    <string name="pref_channel_channel01">Steering</string>
    <string name="pref_channel_channel01_summary">Invert, Max/Min and Trim Steering</string>

    <string name="pref_channel_channel02">Throttle</string>
    <string name="pref_channel_channel02_summary">Invert, Max/Min and Trim Throttle</string>

    <string name="pref_channel_channel03">Channel 03</string>
    <string name="pref_channel_channel03_summary">Change phone Yaw settings</string>

    <string name="action_dot_settings">Settings</string>
    <string name="action_dot_about">About</string>
    <string name="action_menu_hud">HUD</string>
    <string name="action_menu_log">LOG</string>

    <string name="fragment_log_textview">Server has not responded yet</string>
    
    <string name="hud_text_ip_label">IP</string>
    <string name="hud_text_connection_label">Status</string>
    <string name="hud_text_bps_label">B/s</string>
    <string name="hud_text_pitch_label">Pitch</string>
    <string name="hud_text_roll_label">Roll</string>
    <string name="pref_channel_subtitle">Configure channel specific settings</string>
</resources>
