<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_server">
        <EditTextPreference
            android:key="pref_server_ip"
            android:title="@string/pref_server_ip"
            android:summary="@string/pref_server_ip_default"
            android:defaultValue="@string/pref_server_ip_default"/>
        <EditTextPreference
            android:key="pref_server_port"
            android:title="@string/pref_server_port"
            android:summary="@string/pref_server_port_default"
            android:defaultValue="@string/pref_server_port_default"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_channel">
        <PreferenceScreen android:title="@string/pref_channel_channel01"
            android:fragment="com.confusedbrowser.androneee_remote.preferences.ChannelFragment"/>
        <PreferenceScreen android:title="@string/pref_channel_channel02"
            android:fragment="com.confusedbrowser.androneee_remote.preferences.ChannelFragment"/>
        <PreferenceScreen android:title="@string/pref_channel_channel03"
            android:fragment="com.confusedbrowser.androneee_remote.preferences.ChannelFragment"/>
    </PreferenceCategory>
</PreferenceScreen>
